Responsive mobile version final bugs squished - the website now works perfectly for mobile!

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   height: 100vh;
   overflow: hidden;
 }
+.app-mobile{
+  height: 100dvh;
+}
 .title{
   letter-spacing: .4rem;
 }
