--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -8,8 +8,6 @@
 /*---container styles---*/
 .about-container{
     transition: all 0.2s ease-in-out;
-    /*width: 90%;*/
-    /*height: 60%;*/
 }
 .about-mobile{
     width: 100%;
@@ -37,12 +35,15 @@
 .about-content{
     width: 100%;
     height: 100%;
+    max-height: 100%;
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto auto auto 1fr;
     align-items: start;
-    gap: 0.5rem;
+    gap: 1.2rem;
     overflow: hidden;
+    padding-bottom: 1rem;
+    box-sizing: border-box;
 }
 /*---------------------*/
 
@@ -71,7 +72,7 @@
 /*profile picture styles*/
 .profile-picture{
     margin-inline-start: 1rem;
-    margin-block-start: 1rem;
+    margin-block-start: 2rem;
     width: 150px;
 }
 .about-mobile .profile-picture{
@@ -188,6 +189,7 @@
     grid-column-end: 3;
     grid-row-start: 5;
     grid-row-end: 6;
+    min-height: 0;
 }
 /*---------------------*/
 
