--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -3,13 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: 95%;
+    width: 98%;
     height: 100%;
     overflow: hidden;
     gap: 1rem;
+    box-sizing: border-box;
 }
 .tabs-buttons{
     width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,8 +20,9 @@
 }
 .tabs-content{
     width: 100%;
+    flex: 1;
     overflow-y: auto;
-    padding: 1rem;
+    padding: 0;
     min-height: 0;
 }
 .tabs-mobile .tab{
@@ -33,16 +36,22 @@
 }
 
 .tab{
-    width: 100%;
+    width: 15rem;
     cursor: pointer;
     background: transparent;
     border: 1px solid var(--tab-border-color);
     border-radius: var(--border-radius);
     transition: scale 0.1s;
 }
-.tab:hover{
-    scale: 1.1;
+@media (hover: hover) {
+    .tab:hover{
+        scale: 1.04;
+    }
 }
+.tab:active{
+    scale: 0.95;
+}
+
 .active{
     background: var(--tab-activated-background);
     color: var(--tab-activated-text-color);
